[project]
name = "sam-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core
    "runpod",
    "torch",
    "torchaudio",
    "transformers",
    "scipy",
    "soundfile",
    "requests",
    
    # Audio processing
    "torchcodec",
    "torchdiffeq",
    "descript-audiotools",
    
    # ImageBind dependencies
    "iopath",
    "ftfy",
    "regex",
    "open_clip_torch",
    "timm",
    "einops",
    
    # Video/decoding
    "eva-decord",
    "pytorch-lightning",
    
    # Note: Facebook Research git packages are installed separately 
    # in Dockerfile with --no-deps to avoid dependency conflicts
]

