[project]
name = "sam-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core (torch/torchaudio installed separately in Dockerfile for version control)
    "runpod",
    "transformers",
    "scipy",
    "soundfile",
    "requests",
    
    # Audio processing
    "torchcodec",
    "torchdiffeq",
    "descript-audiotools",
    
    # ImageBind dependencies
    "iopath",
    "ftfy",
    "regex",
    "open_clip_torch",
    "timm",
    "einops",
    
    # perception_models dependencies
    "xformers",
    
    # Video/decoding
    "eva-decord",
    "pytorch-lightning",
    
    # Note: Facebook Research git packages are installed separately 
    # in Dockerfile with --no-deps to avoid dependency conflicts
]

